<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CACACA"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CACACA"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="27dp"
                android:text="@string/roll_title"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                app:fontFamily="@font/eagle_lake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="369dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:hint="@string/howmany"
                app:boxStrokeColor="#F44336"
                app:counterEnabled="false"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    tools:text="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="369dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:hint="@string/your_dice"
                app:boxStrokeColor="#F44336"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField1"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    tools:text="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                android:layout_width="369dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:hint="@string/modifiers"
                app:boxStrokeColor="#F44336"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField2"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEdit3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    tools:text="0" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/rollButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:text="@string/roll"
                app:layout_constraintEnd_toStartOf="@+id/viewHist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listHist" />

            <TextView
                android:id="@+id/rollResult"
                android:layout_width="63dp"
                android:layout_height="48dp"
                android:layout_marginTop="93dp"
                android:layout_marginBottom="87dp"
                android:gravity="center"
                android:textColor="#F44336"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.448"
                tools:text="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="276dp"
                android:layout_height="0dp"
                android:layout_marginTop="79dp"
                android:layout_marginBottom="145dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollButton"
                app:srcCompat="@drawable/d20" />

            <ListView
                android:id="@+id/listHist"
                android:layout_width="380dp"
                android:layout_height="228dp"
                android:layout_marginTop="19dp"
                android:background="#CACACA"
                android:fadeScrollbars="false"
                android:scrollbarStyle="insideOverlay"
                android:smoothScrollbar="true"
                android:soundEffectsEnabled="true"
                android:visibility="invisible"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/viewHist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="59dp"
                android:layout_marginRight="59dp"
                android:text="@string/vhist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listHist" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>